とりあえず表示できた

--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -108,7 +108,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Gauge.cpp" />
+    <ClCompile Include="Gauge.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -190,7 +192,9 @@
     <ClInclude Include="Player.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Gauge.h" />
+    <ClInclude Include="Gauge.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
